templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
  selector:
    app: nginx-server
