templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  defaultBackend:
    service:
      name: nginx-svc
      port:
        number: 8080

# FOR SSL:
#
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: letsencrypt-production
# spec:
#   tls:
#   - hosts:
#     - some.domain.pl
#     secretName: nginx-tls-secret
#   rules:
#   - host: some.domain.pl
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx-svc
#             port:
#               name: 8080
